# jest-test-repro

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  jest.bzl  jest.config.js  package.json  tsconfig.json
ts/lib/greet/: BUILD.bazel  greet.test.ts  greet.ts  package.json  tsconfig.json
ts/svc/hw/: BUILD.bazel  app.ts  tsconfig.json
