load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("//:jest.bzl", "jest_test")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig-greet",
    src = "tsconfig.json",
    deps = ["//:tsconfig.json"],
)

ts_project(
    declaration = True,
    tsconfig = ":tsconfig-greet",
    deps = [
        "@npm//@types/jest",
        "@npm//@types/node",
    ],
)

js_library(
    name = "greet",
    package_name = "@lib/greet",
    srcs = ["package.json"],
    deps = [":tsconfig"],
)

jest_test(
    name = "ts_greet_test",
    srcs = [":tsconfig"],
    jest_config = "//:jest.config.js",
    deps = [],
)
