load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_project", "ts_config")

package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "hw",
    data = [":tsconfig"],
    entry_point = ":app.ts",
)

ts_config(
    name = "tsconfig-hw",
    src = "tsconfig.json",
    deps = ["//:tsconfig.json"],
)

ts_project(
    tsconfig = ":tsconfig-hw",
    deps = [
        "@npm//@types/cli-color",
        "@npm//@types/node",
        "@npm//cli-color",
        "//ts/lib/greet",
    ],
)
