load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")

package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "hw",
    data = [":tsconfig"],
    entry_point = ":app.ts",
)

ts_config(
    name = "tsconfig-hw",
    src = "tsconfig.json",
    deps = ["//:tsconfig.json"],
)

ts_project(
    tsconfig = ":tsconfig-hw",
    deps = [
        "//ts/lib/greet",
        "@npm//@types/cli-color",
        "@npm//@types/node",
        "@npm//cli-color",
    ],
)
